[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nave.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Meteorito.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://AsteorideCrash_TW.wav" type="AudioStream" id=5]
[ext_resource path="res://SpaceTheme_1.wav" type="AudioStream" id=6]
[ext_resource path="res://art/bg.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 800, 0, 0, 0, 0, 0, 800, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
scene_meteorito = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -400.0
margin_right = 1712.0
margin_bottom = 1268.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
flip_h = true
flip_v = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.666667 )

[node name="Nave" parent="." instance=ExtResource( 1 )]

[node name="Timer_Meteorito" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer_Puntuacion" type="Timer" parent="."]

[node name="Timer_Inicio" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Position2D_Inicio" type="Position2D" parent="."]
position = Vector2( 512, 400 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D_GeneradorMeteoritos" type="PathFollow2D" parent="Path2D"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SonidoMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="golpe" from="Nave" to="." method="fin_de_juego"]
[connection signal="timeout" from="Timer_Meteorito" to="." method="_on_Timer_Meteorito_timeout"]
[connection signal="timeout" from="Timer_Puntuacion" to="." method="_on_Timer_Puntuacion_timeout"]
[connection signal="timeout" from="Timer_Inicio" to="." method="_on_Timer_Inicio_timeout"]
[connection signal="inicio_juego" from="HUD" to="." method="nuevo_juego"]
